Fix yellow focus colour overspill

--- a/app/assets/stylesheets/govuk_publishing_components/components/_share-links.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_share-links.scss
@@ -136,6 +136,10 @@ $column-width: 9.5em;
   .gem-c-share-links__label {
     @include govuk-font(19, $weight: bold);
   }
+
+  .gem-c-share-links__link:focus {
+    box-shadow: 0 0 $govuk-focus-colour, 0 4px govuk-colour("black");
+  }
 }
 
 .gem-c-share-links--black-icons {
